# spy-backtester

./: .gitignore  main.py  pyproject.toml
spy_backtest/: backtest_logic.py  data_handler.py  gui.py  logger.py  visualizer.py
